﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.12...]
### 2018-12-24
	Removed: Per watchlist rule Rescan option. It was only used if global scanning was disabled.
		Since the mechanism is the same as global scan, it is recommended to just use potentially faster global scan instead.
### 2018-12-23
	Fixed: Clicking on tray icon now properly restores the window to visibility. Even when minimized.
	Added: The main window or the tray gaining user interaction temporarily lifts TM to higher priority to make it more responsive
		during user interactions. It pushes itself back to anonymity when this interaction ends.
### 2018-12-13
	Fixed: Volume management for watchlist rules was disabling UI elements incorrectly.
	Fixed: Path Visibility options 1 and 2 were swapped.
	Added: Basic implementation of smart path visibility.
	Removed: RegRun option of starting. This is not cleaned up. If you used it, please remove it manually.
	Changed: Session end detection and exit.
### 2018-12-12
	Added: High DPI-awareness. Untested, may simply be broken. On default 96 DPI this has no observable effect as expected.
	External: Serilog updated from v2.6.0 to v2.7.1
	External: NAudio updated from v1.8.4 to v1.8.5
	Fixed: Power mode changes from foreground only & background powerdown were far too spammy.
### 2018-12-11
	Fixed: Foreground hang detector can have some undesirable behaviour.
	Fixed: Loglist was sizing wrong. Hopefully fixed.
	Added: Option to reset power config added.
### 2018-12-10 Version 0.12
	Added: Watchlist rules now have description property for user comments.
	Changed: Visual styles are enabled. This was required to allow keyboard shortcuts in text fields like ctrl-a.
	Fixed: Reduced ListView flickering.

## [0.11...]
### 2018-12-09
	Fixed: Accidentally disabled tray context menu.
	Added: Logging for unhandled WinForms exceptions.